--- a/Home.html
+++ b/Home.html
@@ -23,14 +23,15 @@
   &lt;/head&gt;
   &lt;body&gt;
     &lt;!-- FreeWaitlists Widget --&gt;
-    &lt;script src=&quot;https://freewaitlists.com/widgets/email-widget.js&quot; 
-      data-waitlist-id=&quot;cmfyezrdk0004o201x48ldkqn&quot; 
-      data-button-text=&quot;Join Waitlist&quot;
-      data-input-placeholder=&quot;Enter your email&quot; 
-      data-success-message=&quot;Thank you for joining the waitlist!&quot;
-      data-error-message=&quot;Something went wrong. Please try again later.&quot;
-      data-bad-email-message=&quot;Please enter a valid email address.&quot;&gt;
-    &lt;/script&gt;
+    <!-- FreeWaitlists Widget -->
+<script src="https://freewaitlists.com/widgets/email-widget.js" 
+  data-waitlist-id="cmfyezrdk0004o201x48ldkqn" 
+  data-button-text="Join Waitlist"
+  data-input-placeholder="Enter your email" 
+  data-success-message="Thank you for joining the waitlist!"
+  data-error-message="Something went wrong. Please try again later."
+  data-bad-email-message="Please enter a valid email address.">
+</script
   &lt;/body&gt;
 &lt;/html&gt;
 " jsaction="rcuQ6b:rcuQ6b;"><iframe class="pxjVId"></iframe></div></div></div></div></div></div></div></div></div></div></div><div class="hJDwNd-AhqUyc-OwsYgb Ft7HRd-AhqUyc-OwsYgb purZT-AhqUyc-II5mzb ZcASvf-AhqUyc-II5mzb pSzOP-AhqUyc-qWD73c Ktthjf-AhqUyc-qWD73c JNdkSc SQVYQc"><div class="JNdkSc-SmKAyb LkDMRd"><div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;" jsname="F57UId"><div class="oKdM2c ZZyype Kzv0Me"><div id="h.21e1a855201bfb73_11" class="hJDwNd-AhqUyc-OwsYgb Ft7HRd-AhqUyc-OwsYgb jXK9ad D2fZ2 zu5uec OjCsFc dmUFtb wHaque g5GTcb"><div class="jXK9ad-SmKAyb"><div class="tyJCtd baZpAe"><div class="t3iYD"><img src="Home/3df159a475de9d4c2a6560e6e64edd68.jpg" class="CENy8b" role="img" style="width: 100%; margin: -16.087468381% 0 -16.087468381% 0%"></div></div></div></div></div></div></div></div></div></div></section></div></div></div></div><script nonce="aL4jUnm9bS4y7Nzn2wfSgQ">DOCS_timing['cov']=new Date().getTime();</script><script id="base-js" nonce="aL4jUnm9bS4y7Nzn2wfSgQ">var _F_jsUrl = '/_/atari/_/js/k=';
