--- a/Home.html
+++ b/Home.html
@@ -61,7 +61,7 @@
   <div class="container">
     <div class="text-section">
       <div class="logo">
-        <img src="logo-icon.png" alt="Safe To Eat Logo" />
+        <img src="logo-icon.jpg" alt="Safe To Eat Logo" />
         <span>Safe To Eat</span>
       </div>
       <h1>
@@ -74,7 +74,7 @@
       </p>
     </div>
     <div class="phone-image">
-      <img src="phone-mockup.png" alt="Phone showing allergen detection app" />
+      <img src="phone-mockup.jpg" alt="Phone showing allergen detection app" />
     </div>
   </div>
 </body>
