--- a/Home.html
+++ b/Home.html
@@ -17,43 +17,43 @@
     .container {
       display: flex;
       align-items: center;
-      gap: 60px;
-      max-width: 1200px;
-      padding: 20px;
+      gap: 100px;
+      max-width: 1400px;
+      padding: 40px;
     }
     .text-section {
-      max-width: 500px;
+      max-width: 600px;
     }
     .logo {
       display: flex;
       align-items: center;
-      gap: 10px;
-      margin-bottom: 40px;
+      gap: 20px;
+      margin-bottom: 60px;
     }
     .logo img {
-      width: 24px; /* Adjust as needed */
-      height: 24px;
+      width: 48px; /* doubled size */
+      height: 48px;
     }
     .logo span {
-      font-weight: 600;
-      font-size: 18px;
+      font-weight: 700;
+      font-size: 28px;
     }
     h1 {
-      font-weight: 700;
-      font-size: 2.5rem;
-      line-height: 1.3;
-      margin-bottom: 20px;
+      font-weight: 800;
+      font-size: 4rem;  /* bigger headline */
+      line-height: 1.2;
+      margin-bottom: 30px;
     }
     p.subtitle {
-      font-weight: 400;
-      font-size: 14px;
+      font-weight: 500;
+      font-size: 18px;
       color: #333;
     }
     .phone-image img {
-      width: 320px; /* Adjust to desired size */
+      width: 480px; /* bigger phone image */
       height: auto;
-      border-radius: 30px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      border-radius: 40px;
+      box-shadow: 0 6px 30px rgba(0,0,0,0.15);
     }
   </style>
 </head>
