--- a/Home.html
+++ b/Home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Smart Allergen Detection</title>
+  <title>Safe To Eat</title>
   <style>
     body {
       margin: 0;
@@ -72,6 +72,19 @@
       <p class="subtitle">
         Stay one step ahead of allergens with easy and accurate detection.
       </p>
+      <!-- Waitlist widget embed -->
+      <div id="waitlist-widget">
+        <script 
+          src="https://freewaitlists.com/widgets/email-widget.js" 
+          data-waitlist-id="cmfyezrdk0004o201x48ldkqn" 
+          data-button-text="Join Waitlist"
+          data-input-placeholder="Enter your email" 
+          data-success-message="Thank you for joining the waitlist!"
+          data-error-message="Something went wrong. Please try again later."
+          data-bad-email-message="Please enter a valid email address.">
+        </script>
+      </div>
+    </div>
     </div>
     <div class="phone-image">
       <img src="phone-mockup.png" alt="Phone showing allergen detection app" />
