--- a/Home.html
+++ b/Home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Safe To Eat</title>
+  <title>Smart Allergen Detection</title>
   <style>
     body {
       margin: 0;
@@ -11,7 +11,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      min-height: 100vh;
       background: #fff;
     }
     .container {
@@ -20,6 +20,7 @@
       gap: 100px;
       max-width: 1400px;
       padding: 40px;
+      flex-wrap: wrap;
     }
     .text-section {
       max-width: 600px;
@@ -31,7 +32,7 @@
       margin-bottom: 60px;
     }
     .logo img {
-      width: 48px; /* doubled size */
+      width: 48px;
       height: 48px;
     }
     .logo span {
@@ -40,7 +41,7 @@
     }
     h1 {
       font-weight: 800;
-      font-size: 4rem;  /* bigger headline */
+      font-size: 4rem;
       line-height: 1.2;
       margin-bottom: 30px;
     }
@@ -48,9 +49,13 @@
       font-weight: 500;
       font-size: 18px;
       color: #333;
+      margin-bottom: 30px;
+    }
+    #waitlist-widget {
+      max-width: 400px;
     }
     .phone-image img {
-      width: 480px; /* bigger phone image */
+      width: 480px;
       height: auto;
       border-radius: 40px;
       box-shadow: 0 6px 30px rgba(0,0,0,0.15);
@@ -61,7 +66,7 @@
   <div class="container">
     <div class="text-section">
       <div class="logo">
-        <img src="logo-icon.png" alt="Safe To Eat Logo" />
+        <img src="logo-icon.jpg" alt="Safe To Eat Logo" />
         <span>Safe To Eat</span>
       </div>
       <h1>
@@ -72,23 +77,29 @@
       <p class="subtitle">
         Stay one step ahead of allergens with easy and accurate detection.
       </p>
-      <!-- Waitlist widget embed -->
-      <div id="waitlist-widget">
-        <script 
-          src="https://freewaitlists.com/widgets/email-widget.js" 
-          data-waitlist-id="cmfyezrdk0004o201x48ldkqn" 
-          data-button-text="Join Waitlist"
-          data-input-placeholder="Enter your email" 
-          data-success-message="Thank you for joining the waitlist!"
-          data-error-message="Something went wrong. Please try again later."
-          data-bad-email-message="Please enter a valid email address.">
-        </script>
-      </div>
+
+      <!-- Placeholder for the Waitlist Widget -->
+      <div id="waitlist-widget"></div>
     </div>
-    </div>
+
     <div class="phone-image">
-      <img src="phone-mockup.png" alt="Phone showing allergen detection app" />
+      <img src="phone-mockup.jpg" alt="Phone showing allergen detection app" />
     </div>
   </div>
+
+  <!-- Load the widget script AFTER the page loads -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const script = document.createElement("script");
+      script.src = "https://freewaitlists.com/widgets/email-widget.js";
+      script.setAttribute("data-waitlist-id", "cmfyezrdk0004o201x48ldkqn");
+      script.setAttribute("data-button-text", "Join Waitlist");
+      script.setAttribute("data-input-placeholder", "Enter your email");
+      script.setAttribute("data-success-message", "Thank you for joining the waitlist!");
+      script.setAttribute("data-error-message", "Something went wrong. Please try again later.");
+      script.setAttribute("data-bad-email-message", "Please enter a valid email address.");
+      document.getElementById("waitlist-widget").appendChild(script);
+    });
+  </script>
 </body>
 </html>
