--- a/Home.html
+++ b/Home.html
@@ -53,6 +53,20 @@
     }
     #waitlist-widget {
       max-width: 400px;
+      margin-bottom: 20px;
+    }
+    .feedback-link {
+      display: inline-block;
+      padding: 14px 24px;
+      background-color: #0073e6;
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+      border-radius: 10px;
+      transition: background 0.3s ease;
+    }
+    .feedback-link:hover {
+      background-color: #005bb5;
     }
     .phone-image img {
       width: 480px;
@@ -80,6 +94,15 @@
 
       <!-- Placeholder for the Waitlist Widget -->
       <div id="waitlist-widget"></div>
+
+      <!-- Feedback Button -->
+      <a 
+        href="https://getfiddo.com/boards/safe-to-eat" 
+        class="feedback-link" 
+        target="_blank" 
+        rel="noopener noreferrer">
+        💡 Have Ideas or Feedback
+      </a>
     </div>
 
     <div class="phone-image">
